# RAG-for-Learning-System

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
source/models/: gemini_llm.py
source/rag/ingestion/: file_loader.py  vector_db.py
src/: __init__.py  cli.py  config.py  export.py  filters.py  indexing.py  learning.py  llm.py  rag.py  schemas.py  services.py  store.py
src/evaluation/: chunking_strategies.py  evaluator.py  metrics.py  ragas_evaluator.py  run_chunking.py  run_chunking_eval.py  run_reranking.py  run_vllm.md
src/evaluation/chunking/: __init__.py  chunkers.py  run_chunking_eval.py
src/evaluation/reranking/: reranker_eval.py
src/interfaces/: api.py  cli.py  styles.py  ui.py
src/prompts/: answer.jinja2  flashcards.jinja2  quiz.jinja2  summary_map.jinja2  summary_reduce.jinja2  summary_single.jinja2
