[project]
name = "rag-for-learning-system"
version = "0.1.0"
description = "Minimal, production-style RAG core over local PDFs with Qdrant and LangChain."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.0,<2",
    "fastapi>=0.115,<0.120",
    "httpx>=0.27,<1",
    "jinja2>=3.1,<4",
    "langchain>=1.2,<2",
    "langchain-community>=0.4,<0.5",
    "langchain-core>=1.3,<2",
    "langchain-google-genai>=4.2,<5",
    "langchain-huggingface>=1.2,<2",
    "langchain-qdrant>=1.1,<2",
    "langchain-text-splitters>=1.1,<2",
    "loguru>=0.7.3,<0.8",
    "pydantic>=2.13,<3",
    "pypdf>=5,<6",
    "python-dotenv>=1.2,<2",
    "python-multipart>=0.0.12,<0.1",
    "qdrant-client>=1.17,<2",
    "sentence-transformers>=5.4,<6",
    "streamlit>=1.40,<2",
    "torch>=2.4,<3",
    "torchvision>=0.26.0",
    "transformers>=4.47.0,<5",
    "typer>=0.24,<0.25",
    "uvicorn[standard]>=0.34,<0.40",
]

[project.scripts]
rag = "src.interfaces.cli:main"
rag-api = "src.interfaces.api:main"

[dependency-groups]
dev = [
    "ruff>=0.9,<0.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
